feat: Add create, get, delete for schemas
